FF whitespace bug.

--- a/app/styles/_topic-cloud.scss
+++ b/app/styles/_topic-cloud.scss
@@ -49,13 +49,6 @@
 
   .topic {
     margin-right: 20px;
-    white-space: nowrap;
-  }
-
-  .topic:after {
-    white-space: normal;
-    text-decoration: none;
-    content: '';
   }
 }
 
